rebase generated code
